# simple_brats

./: .gitignore  LICENSE  README.md  pyproject.toml
cluster/: prepare_and_submit_a40_resume_smoke.sh  prepare_and_submit_a40_throughput_smoke.sh  prepare_and_submit_checkpoint_evaluation.sh  prepare_and_submit_cohort_preflight.sh  prepare_and_submit_content_audit.sh  prepare_and_submit_filtered_data_gate.sh  prepare_and_submit_heldout_materialization.sh  prepare_and_submit_long_run.sh  prepare_and_submit_manifest.sh  prepare_and_submit_real_io_pilot.sh  prepare_and_submit_short_run.sh  prepare_and_submit_smoke.sh  prepare_and_submit_wandb_online_smoke.sh  prepare_launch.sh  sync_evaluation_wandb.sh  sync_long_run_wandb.sh
configs/: v0_cross_matching.toml  v0_cross_matching_small.toml  v0_cross_matching_small_8mm.toml
docs/: COHORT_PREFLIGHT.md  DATA_AUDIT.md  EXPERIMENT_MATRIX.md  EXPERIMENT_SPEC.md  HELD_OUT_EVALUATION.md  LEAKAGE_AUDIT.md  LONG_RUN.md  OPTIMIZED_RUNTIME.md
protocols/: brats_met_2025_cross_subject_duplicate_quarantine.json
slurm/: a40_resume_smoke.sbatch  a40_throughput_smoke.sbatch  build_manifest.sbatch  cohort_preflight.sbatch  content_audit.sbatch  evaluate_checkpoint.sbatch  filtered_data_gate.sbatch  long_run.sbatch  materialize_heldout_evaluation.sbatch  real_io_pilot.sbatch  short_run.sbatch  smoke.sbatch  wandb_online_smoke.sbatch
tests/: test_a40_resume_smoke.py  test_a40_throughput_smoke.py  test_atomic_io.py  test_capacity_ablation.py  test_case_grids.py  test_checkpoint_evaluation.py  test_checkpoints.py  test_cohort_preflight.py  (+33 more)
(+52 files in other folders)
